[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
tokio={version = "1.28.0", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"]}
rand = "0.8.5"
ctrlc = {version = "3.2.5", features = ["termination"]}
h2 = "0.3.18"
http = "0.2.9"